2008-07-13  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c: correctly calculate border
	thickness so that scrollbars would not appear when unneeded.

2008-07-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpnavigationeditor.c
	(gimp_navigation_editor_popup): BORDER_PEN_WIDTH is a normal
	constant, no need for voodoo.

2008-07-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scroll.[ch]
	(gimp_display_shell_get_scaled_image_size): New function that
	contains logic previously kept in gimp_display_shell_draw_area().

	* app/display/gimpdisplayshell-draw.c
	(gimp_display_shell_draw_area): Use the new function.

2008-07-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_fill): Don't
	ask gimp_display_shell_set_initial_scale() for display size, we
	don't care anyway.

2008-07-13  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimp.c: cache pattern, gradient and palette tags in addition
	to brush tags.

	* app/core/gimpbrush.c (gimp_brush_get_checksum)
	* app/core/gimpgradient.c (gimp_gradient_tagged_init),
	(gimp_gradient_get_checksum)
	* app/core/gimppalette.c (gimp_palette_tagged_init),
	(gimp_palette_get_checksum)
	* app/core/gimppattern.c (gimp_pattern_tagged_init),
	(gimp_pattern_get_checksum): implemented get_checksum method for all
	tagged objects.

2008-07-13  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_auto_complete):
	  autocomplete only user typed text, not what was autocompleted in
	  previous step.

2008-07-13  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c: tag popup displays alphabetically
	sorted tags. Set maximum popup window height and fixed scrolling when
	mouse pointer is grabbed.

2008-07-13  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_query_tag): fixed use of
	  uninitialized variable.
